# c-to-rust

./: README.md
source/.devcontainer/: Dockerfile  devcontainer.json
source/long/__for_trans/: Cargo.toml
source/long/awk/: Makefile  awk.c
source/short/: .gitignore
source/short/b-shoco/: shoco_lib_test.c
source/short/b-urlparser/: Makefile  tests.sh  urlparser_lib_test.c
source/short/b-urlparser/__for_trans/: TRANS.input0.md  TRANS.input1.md  TRANS.input2.md  TRANS.input3.md  TRANS.input4.md  TRANS.input5.md  TRANS.input6.md  TRANS_TMPL.md  gpt_chat_history.md
source/short/bsd-csplit/: Makefile  tests.sh
source/short/bsd-csplit/__for_trans/: TRANS.input0.md  TRANS.input1.md  TRANS.input2.md  TRANS.input3.md  TRANS.input4.md  TRANS_TMPL.md  gpt_chat_history.md
source/short/bsd-expr/: Makefile  expr.c  tests.sh
source/short/bsd-expr/__for_trans/: TRANS.input0.md  TRANS.input1.md  TRANS.input2.md  TRANS.input3.md  TRANS.input4.md  TRANS.input5.md  TRANS_TMPL.md  gpt_chat_history.md
source/short/bsd-fmt/: Makefile  fmt.c  tests.sh
source/short/bsd-fmt/__for_trans/: TRANS.input0.md  TRANS.input1.md  TRANS.input2.md  TRANS_TMPL.md  (+4 more)
source/short/bsd-join/: Makefile  join.c  tests.sh
source/short/bsd-printf/: Makefile  tests.sh
source/short/bsd-test/: Makefile  test.c  tests.sh
workspace/awk/orig_c/: libawk.a.nm
workspace/awk/src/: main.rs
workspace/csplit/: Cargo.toml  tests_rs.sh
workspace/csplit/orig_c/: csplit  csplit.c  csplit.c.gcov  csplit.gcda  csplit.gcno  csplit_dbg  csplit_opt  tests.sh
workspace/csplit/src/: main.rs  main.rs.bak
(+24 files in other folders)
