[package]
name = "short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"  # Use the latest version suitable for your needs
tempfile = "3.2.0"  # Use the latest version suitable for your needs
regex = "1" 
signal-hook = "0.3"
once_cell = "1.8.0"  # Use the latest version available
nix = "0.23.0"
